[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Santosh Shrestha <santoshxshrestha@gmail.com>"]
description = "A simple hello world WebAssembly project using Rust and wasm-bindgen"
repositroy = "https://github.com/santoshxshrestha/Rust-In-Action/tree/main/hello-wasm"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.104"
